--- a/README
+++ b/README
@@ -2,6 +2,16 @@
 
 MODEL INFORMATION
 
-Quantifying erosion rates in high mountain areas is not straightforward due to the stochastic processes which often dictate alpine erosion rates. Among those, frost-cracking and permafrost thaw both contribute to erosion rates in cold, high-alpine regions, but the relative contributions of both are not well-constrained. The STEIN model (stochastically-eroding in situ cosmogenic nuclide model) is a 1D numerical model that simulates surface concentrations of cosmogenic Be-10, C-14, and He-3, alongside the bedrock thermal field, under variable erosion rates and types. Simulations can evolve under the following erosion types: “stochastic,” “uniform,” "episodic," and "no erosion." Each non-uniform erosion scenario is accompanied by a uniformly-eroding output at the Be-10 derived erosion rate.
+Quantifying erosion rates in high mountain areas is not straightforward due to the stochastic processes 
+which often dictate alpine erosion rates. Among those, frost-cracking and permafrost thaw both contribute 
+to erosion rates in cold, high-alpine regions, but the relative contributions of both are not well-constrained. 
+The STEIN model (stochastically-eroding in situ cosmogenic nuclide model) is a 1D numerical model that 
+simulates surface concentrations of cosmogenic Be-10, C-14, and He-3, alongside the bedrock thermal field,
+under variable erosion rates and types. Simulations can evolve under the following erosion types: “stochastic,” 
+“uniform,” "episodic," and "no erosion." Each non-uniform erosion scenario is accompanied by a uniformly-
+eroding output at the Be-10 derived erosion rate.
 
-To run the model, open and run the code "master_script_STEIN." The scripts will generate a sequence of output files. The model can take some time for each individual evaluation, depending on the integration time (total model time) input.
+To run the model, open and run the code "master_script_STEIN." 
+
+The scripts will generate a sequence of output files. The model can take some time for each individual 
+evaluation, depending on the integration time (total model time) input.
