--- a/RunSimulationsEpisodic.ipynb
+++ b/RunSimulationsEpisodic.ipynb
@@ -5,7 +5,7 @@
    "id": "17f8696c",
    "metadata": {},
    "source": [
-    "## Run Constant Erosion Simulations\n",
+    "## Run Episodic Erosion Simulations\n",
     "<br>\n",
     "  \n",
     "#### Syntax\n",
