--- a/RunSimulationsEpisodic.ipynb
+++ b/RunSimulationsEpisodic.ipynb
@@ -9,7 +9,7 @@
     "<br>\n",
     "  \n",
     "#### Syntax\n",
-    "`CalcPars, RunPars, CosmoPars, HeliumPars = RunSimulationsConstant(InputPars)` <br>\n",
+    "`CalcPars, RunPars, CosmoPars, HeliumPars = RunSimulationsEpisodic(InputPars)` <br>\n",
     "#### Input \n",
     "`InputPars` : dictionary containing the following input parameters: <br>\n",
     "    - Total Time : total time to run the model || (yrs) || int <br>\n",
